@@ -62,24 +62,24 @@ $t->get_ok('/robots')
 
 
 # Create short URL
-$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })
     ->status_is(200)
-    ->json_has('url', 'short', 'success', 'qrcode')
+    ->json_has('/url', '/short', '/success', '/qrcode')
     ->json_is('/success' => true, '/url' => 'https://lstu.fr')
     ->json_like('/short' => qr#http://127\.0\.0\.1:\d+/[-_a-zA-Z0-9]{8}#);
 
 # Create short URL with a .onion URL
-$t->post_ok('/a' => form => { lsturl => 'http://lstupiioqgxmq66f.onion', 'lsturl-custom' => 'onion', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'http://lstupiioqgxmq66f.onion', 'lsturl-custom' => 'onion', _format => 'json' })
     ->status_is(200)
-    ->json_has('url', 'short', 'success', 'qrcode')
+    ->json_has('/url', '/short', '/success', '/qrcode')
     ->json_is('/success' => true, '/url' => 'https://lstupiioqgxmq66f.onion', '/short' => 'http://127.0.0.1/onion');
 
 Lstu::DB::Ban->new(app => $m)->delete_all; # prevents ban
 
 # Create short URL with robots custom short
-$t->post_ok('/a' => form => { lsturl => 'http://robots-txt.com/', 'lsturl-custom' => 'robots', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'http://robots-txt.com/', 'lsturl-custom' => 'robots', _format => 'json' })
     ->status_is(200)
-    ->json_has('url', 'short', 'success', 'qrcode')
+    ->json_has('/url', '/short', '/success', '/qrcode')
     ->json_is('/success' => true, '/url' => 'https://lstu.fr', '/short' => 'http://127.0.0.1/robots');
 
 # Test robots.txt even after creating a robots short URL
@@ -90,9 +90,9 @@ $t->get_ok('/robots')
 
 # Create short URL, with invalid argument
 # Create short URL, with invalid argument
-$t->post_ok('/a' => form => { lsturl => 'truc', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'truc', _format => 'json' })
     ->status_is(200)
-    ->json_has('msg', 'success')
+    ->json_has('/msg', '/success')
     ->json_is({success => false, msg => 'truc is not a valid URL.'});
 
 Lstu::DB::Ban->new(app => $m)->delete_all; # prevents ban
@@ -101,14 +101,14 @@ Lstu::DB::Ban->new(app => $m)->delete_all; # prevents ban
 sleep 5;
 
 # Create short URL
-my $a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })->res->json('/short');
+my $a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })->res->json('/short');
 
 # Test redirection
 $t->get_ok($a)
     ->status_is(301);
 
 # Test JSON answer
-$t->get_ok($a.'.json')
+$t->get_ok($a.'?_format=json')
     ->status_is(200)
     ->json_is({success => true, url => 'https://lstu.fr'});
 
@@ -118,12 +118,12 @@ my $short = Mojo::URL->new($a)->path();
 # Get stats about the short URL
 $t->get_ok('/stats'.$short)
     ->status_is(200)
-    ->json_has('success', 'short', 'url', 'counter', 'created_at', 'timestamp')
+    ->json_has('/success', '/short', '/url', '/counter', '/created_at', '/timestamp')
     ->json_is('/success' => true, '/url' => 'https://lstu.fr', '/short' => $a, '/counter' => 1)
     ->json_like('/created_at' => qr#[0-9]{10}#, '/timestamp' => qr#[0-9]{10}#);
 
 # Test JSON answer on invalid short URL
-$t->get_ok($a.'i.json')
+$t->get_ok($a.'i?_format=json')
     ->status_is(404)
     ->json_is({success => false, msg => 'The shortened URL '.$a.'i doesn\'t exist.'});
 
@@ -135,7 +135,7 @@ $t->get_ok('/stats'.$short.'i')
 # Test full stats
 $t->get_ok('/fullstats')
     ->status_is(200)
-    ->json_has('urls', 'empty', 'timestamp')
+    ->json_has('/urls', '/empty', '/timestamp')
     ->json_is('/urls' => 3)
     ->json_like('/empty' => qr#\d+#, '/timestamp' => qr#[0-9]{10}#);
 
@@ -143,7 +143,7 @@ $t->get_ok('/fullstats')
 $t->app->minion->perform_jobs if ($t->app->config('minion') && $t->app->config('minion')->{enabled});
 
 # Get stats in JSON format
-$t->get_ok('/stats.json')
+$t->get_ok('/stats?_format=json')
     ->status_is(200)
     ->json_has('/0/created_at', '/0/counter', '/0/short', '/0/url', '/0/qrcode')
     ->json_is('/0/url' => 'https://lstu.fr', '/0/short' => $a)
@@ -172,18 +172,18 @@ $t->get_ok('/d'.$b)
     ->content_like(qr/WTFPL/);
 
 # Verify that short URL does not exists anymore
-$t->get_ok($a.'.json')
+$t->get_ok($a.'?_format=json')
     ->status_is(404)
     ->json_is({success => false, msg => 'The shortened URL '.$a.' no longer exists.'});
 
 # Create short URL
-$a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })->res->json('/short');
+$a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })->res->json('/short');
 
 # Extract the path of the short URL
 $a = Mojo::URL->new($a)->path();
 
 # Delete short URL while admin, JSON format
-$t->get_ok('/d'.$a.'?format=json')
+$t->get_ok('/d'.$a.'?_format=json')
     ->status_is(200)
     ->json_is({success => true, deleted => 1});
 
@@ -208,15 +208,15 @@ $t->post_ok('/stats' => form => { adminpwd => 'totoi' })
 # Test user ban
 Lstu::DB::Ban->new(app => $m)->delete_all; # reset ban
 Lstu::DB::URL->new(app => $m)->delete_all;
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
 
-$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })
     ->status_is(200)
-    ->json_has('msg', 'success')
+    ->json_has('/msg', '/success')
     ->json_is('/success' => false)
     ->json_like('/msg' => qr#You asked to shorten too many URLs too quickly\. You're banned for \d+ hour\(s\)\.#);
 
@@ -226,9 +226,9 @@ Lstu::DB::Ban->new(app => $m)->delete_all; # reset ban
 sleep 3;
 
 # Create short URL, JSON format
-$t->post_ok('/a' => form => { lsturl => ' https://fiat-tux.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => ' https://fiat-tux.fr', _format => 'json' })
     ->status_is(200)
-    ->json_has('url', 'short', 'success', 'qrcode')
+    ->json_has('/url', '/short', '/success', '/qrcode')
     ->json_is('/success' => true, '/url' => 'https://fiat-tux.fr')
     ->json_like('/short' => qr#http://127\.0\.0\.1:\d+/[-_a-zA-Z0-9]{8}#);
 
@@ -237,7 +237,7 @@ my $config_file    = Mojo::File->new($cfile->to_abs->to_string);
 my $config_content = $config_file->slurp;
 my $config_orig    = $config_content;
    $config_content =~ s/#?htpasswd.*/htpasswd => 't\/lstu.passwd',/gm;
-$config_file->spurt($config_content);
+$config_file->spew($config_content);
 
 Lstu::DB::Ban->new(app => $m)->delete_all; # reset ban
 Lstu::DB::URL->new(app => $m)->delete_all;
@@ -258,15 +258,15 @@ $t->post_ok('/login' => form => { login => 'luc', password => 'titi' })
     ->status_is(200)
     ->content_like(qr/Please, check your credentials: unable to authenticate\./);
 
-$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })
     ->status_is(302);
 
 $t->post_ok('/login' => form => { login => 'luc', password => 'toto' })
     ->status_is(302);
 
-$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })
     ->status_is(200)
-    ->json_has('url', 'short', 'success', 'qrcode')
+    ->json_has('/url', '/short', '/success', '/qrcode')
     ->json_is('/success' => true, '/url' => 'https://lstu.fr')
     ->json_like('/short' => qr#http://127\.0\.0\.1:\d+/[-_a-zA-Z0-9]{8}#);
 
@@ -277,109 +277,109 @@ $t->get_ok('/logout')
 # Test IP whitelisting
 $config_content = $config_orig;
 $config_content =~ s/^( +)#?ban_whitelist.*/$1ban_whitelist => ['::1', '127.0.0.1'],/gm;
-$config_file->spurt($config_content);
+$config_file->spew($config_content);
 
 $t = Test::Mojo->new('Lstu');
 
 # Give time to provision some short URLs
 sleep 3;
 
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
 
-$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })
     ->status_is(200)
-    ->json_has('url', 'short', 'success', 'qrcode')
+    ->json_has('/url', '/short', '/success', '/qrcode')
     ->json_is('/success' => true, '/url' => 'https://lstu.fr')
     ->json_like('/short' => qr#http://127\.0\.0\.1:\d+/[-_a-zA-Z0-9]{8}#);
 
-$config_file->spurt($config_orig);
+$config_file->spew($config_orig);
 
 # Test IP blacklisting
 $config_content = $config_orig;
 $config_content =~ s/^( +)#?ban_blacklist.*/$1ban_blacklist => ['::1', '127.0.0.1'],/gm;
-$config_file->spurt($config_content);
+$config_file->spew($config_content);
 
 $t = Test::Mojo->new('Lstu');
 
 # Give time to provision some short URLs
 sleep 3;
 
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
-$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
+$t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' });
 
-$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })
     ->status_is(200)
-    ->json_has('msg', 'success')
+    ->json_has('/msg', '/success')
     ->json_is('/success' => false)
     ->json_like('/msg' => qr#You asked to shorten too many URLs too quickly\. You're banned for \d+ hour\(s\)\.#);
 
-$config_file->spurt($config_orig);
+$config_file->spew($config_orig);
 
 # Test domain blacklisting
 Lstu::DB::Ban->new(app => $m)->delete_all;
 $config_content = $config_orig;
 $config_content =~ s/^( +)#?spam_blacklist_regex.*/$1spam_blacklist_regex => 'google\\.(fr|com)',/gm;
-$config_file->spurt($config_content);
+$config_file->spew($config_content);
 
 $t = Test::Mojo->new('Lstu');
 
 # Give time to provision some short URLs
 sleep 3;
 
-$t->post_ok('/a' => form => { lsturl => 'https://google.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://google.fr', _format => 'json' })
     ->status_is(200)
-    ->json_has('msg', 'success')
+    ->json_has('/msg', '/success')
     ->json_is({success => false, msg => 'The URL you want to shorten comes from a domain (google.fr) that is blacklisted on this server (usually because of spammers that use this domain).'});
 
-$t->post_ok('/a' => form => { lsturl => 'https://google.com', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://google.com', _format => 'json' })
     ->status_is(200)
-    ->json_has('msg', 'success')
+    ->json_has('/msg', '/success')
     ->json_is({success => false, msg => 'The URL you want to shorten comes from a domain (google.com) that is blacklisted on this server (usually because of spammers that use this domain).'});
 
-$t->post_ok('/a' => form => { lsturl => 'https://google.de', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://google.de', _format => 'json' })
     ->status_is(200)
-    ->json_has('url', 'short', 'success', 'qrcode')
+    ->json_has('/url', '/short', '/success', '/qrcode')
     ->json_is('/success' => true, '/url' => 'https://google.de')
     ->json_like('/short' => qr#http://127\.0\.0\.1:\d+/[-_a-zA-Z0-9]{8}#);
 
 # Test domain whitelisting
 Lstu::DB::Ban->new(app => $m)->delete_all;
 $config_content =~ s/^( +)#?spam_whitelist_regex.*/$1spam_whitelist_regex => 'google\.fr',/gm;
-$config_file->spurt($config_content);
+$config_file->spew($config_content);
 
 $t = Test::Mojo->new('Lstu');
 
 # Give time to provision some short URLs
 sleep 3;
 
-$t->post_ok('/a' => form => { lsturl => 'https://google.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://google.fr', _format => 'json' })
     ->status_is(200)
-    ->json_has('url', 'short', 'success', 'qrcode')
+    ->json_has('/url', '/short', '/success', '/qrcode')
     ->json_is('/success' => true, '/url' => 'https://google.fr')
     ->json_like('/short' => qr#http://127\.0\.0\.1:\d+/[-_a-zA-Z0-9]{8}#);
 
-$t->post_ok('/a' => form => { lsturl => 'https://google.com', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://google.com', _format => 'json' })
     ->status_is(200)
-    ->json_has('msg', 'success')
+    ->json_has('/msg', '/success')
     ->json_is({success => false, msg => 'The URL you want to shorten comes from a domain (google.com) that is blacklisted on this server (usually because of spammers that use this domain).'});
 
 # Test Cache system
 $config_content =~ s/^( +)#?memcached_servers => \[\],/memcached_servers => ['127.0.0.1:11211'],/gm;
-$config_file->spurt($config_content);
+$config_file->spew($config_content);
 
 $t = Test::Mojo->new('Lstu');
 
 # Give time to provision some short URLs
 sleep 3;
 
-$a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })->res->json('/short');
+$a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })->res->json('/short');
 $t->get_ok($a)
     ->status_is(301);
 
@@ -388,7 +388,7 @@ my $help = `carton exec script/lstu help url`;
 like($help, qr/Print infos about the space-separated URLs/m, 'Test help url command');
 
 # Create short URL
-$a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })->res->json('/short');
+$a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })->res->json('/short');
 
 # Extract the path of the short URL
 $a =~ s#.*/##;
@@ -403,12 +403,12 @@ my $remove = `MOJO_CONFIG=$cfile carton exec script/lstu url --remove $a --yes`;
 like($remove, qr/Success/m, 'Test url --remove command');
 
 # Restore configuration
-$config_file->spurt($config_orig);
+$config_file->spew($config_orig);
 
 ## Test LDAP
 $config_content = $config_orig;
 $config_content =~ s/^( +)#?ldap => \{ uri/$1ldap => { uri/gm;
-$config_file->spurt($config_content);
+$config_file->spew($config_content);
 
 Lstu::DB::URL->new(app => $m)->delete_all;
 $t = Test::Mojo->new('Lstu');
@@ -423,20 +423,20 @@ $t->get_ok('/login')
     ->status_is(200)
     ->content_like(qr/Signin/i);
 
-$t->post_ok('/a' => form => { lsturl => 'https://google.com', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://google.com', _format => 'json' })
     ->status_is(302);
 
 $t->post_ok('/login' => form => { login => 'zoidberg', password => 'zoidberg' })
     ->status_is(302);
 #
 # Create short URL
-$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })
+$t->post_ok('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })
     ->status_is(200)
-    ->json_has('url', 'short', 'success', 'qrcode')
+    ->json_has('/url', '/short', '/success', '/qrcode')
     ->json_is('/success' => true, '/url' => 'https://lstu.fr')
     ->json_like('/short' => qr#http://127\.0\.0\.1:\d+/[-_a-zA-Z0-9]{8}#);
 
-$a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', format => 'json' })->res->json('/short');
+$a = $t->ua->post('/a' => form => { lsturl => 'https://lstu.fr', _format => 'json' })->res->json('/short');
 
 # Test redirection
 $t->get_ok($a)
@@ -458,14 +458,14 @@ $t->get_ok($a)
     ->status_is(301);
 
 # Restore configuration
-$config_file->spurt($config_orig);
+$config_file->spew($config_orig);
 
 ## Test headers modifications
 $config_content = $config_orig;
 $config_content =~ s/^( +)#?x_frame_options => 'DENY',/$1x_frame_options => 'SAMEORIGIN',/gm;
 $config_content =~ s/^( +)#?x_xss_protection => '1; mode=block',/$1x_xss_protection => '1',/gm;
 $config_content =~ s/^( +)#?x_content_type_options => 'nosniff',/$1x_content_type_options => '',/gm;
-$config_file->spurt($config_content);
+$config_file->spew($config_content);
 
 $t = Test::Mojo->new('Lstu');
 
@@ -478,6 +478,6 @@ $t->get_ok('/')
     ->header_is('Content-Security-Policy' => "base-uri 'self'; default-src 'none'; font-src 'self'; form-action 'self'; frame-ancestors 'self'; img-src 'self' data:; script-src 'self'; style-src 'self'");
 
 # Restore configuration
-$config_file->spurt($config_orig);
+$config_file->spew($config_orig);
 
 done_testing();
